@@ -23,6 +23,7 @@ Version 1.13.1+dev:
    * Updated translations: French, Galician, Latvian
  * Lua API:
    * Added support for unit.level field (read only)
+   * Added wesnoth.set_dialog_focus function
  * Music and sound effects:
    * New dwarf hit and die sounds.
  * User interface:
